--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="name" required>
+                <br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="email" required>
+                <br><br>
+                Gender:
+                <label for="gender_m">Male</label>
+                <input type="radio" id="gender_m" value="Male" name="gender" required>
+                <label for="gender_f">Female</label>
+                <input type="radio" id="gender_f" value="Female" name="gender" required>
+                <br><br>
+                <label for="cars">Car Brands:</label>
+                    <select name="cars" id="cars">
+                    <option value="choose your car">--Please choose an option--</option>
+                    <option value="bmw">BMW</option>
+                    <option value="audi">Audi</option>
+                    <option value="mercedez">Mercedez</option>
+                    </select>
+                <br><br>
+                <label for="age">Age:</label>
+                <input type="number" min="1" max="100" id="age" name="age" placeholder="age" required>
+                <br><br>
+                <label for="dob">DOB:</label>
+                <input type="date" id="dob" name="dob" required>
+                <br><br>
+                <label for="phone">Phone Number:</label>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="xxx-xxx-xxxx">
+                <br><br>
+                <label for="password">Password</label>
+                <input type="password" id="password"  name="password" placeholder="password" required>
+                <br><br>
+                <input type="checkbox" required>I agree to the TOS
+                <br><br>
+                <button type="submit">submit</button>
+            </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
