--- a/main.html
+++ b/main.html
@@ -35,13 +35,14 @@
                 <label for="dob">DOB:</label>
                 <input type="date" id="dob" name="dob" required>
                 <br><br>
-                <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="xxx-xxx-xxxx">
+                <label for="tel">Phone Number:</label>
+                <input type="tel" id="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="xxx-xxx-xxxx">
                 <br><br>
                 <label for="password">Password</label>
                 <input type="password" id="password"  name="password" placeholder="password" required>
                 <br><br>
-                <input type="checkbox" required>I agree to the TOS
+		<label for="tos">I agree to the TOS</label>
+                <input type="checkbox" id="tos" required>
                 <br><br>
                 <button type="submit">submit</button>
             </form>
